# ai-news-alerts

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
config/: sources.yaml
data/: seen_news.json
docs/superpowers/plans/: 2026-05-05-ai-trend-brief-implementation.md
docs/superpowers/specs/: 2026-05-05-ai-trend-brief-design.md
src/ai_news_alerts/: __init__.py  main.py  models.py  seen.py  selection.py  slack.py
src/ai_news_alerts/collectors/: __init__.py  hn.py  rss.py
src/ai_news_alerts/enrich/: __init__.py  github.py
tests/: test_collectors.py  test_main.py  test_models.py  test_seen.py  test_selection.py  test_slack.py
